Add GraalVM native-image docs, update version to 3.15
New page: native-image.md — covers provider behavior in native-image,
required flags (--enable-native-access), Maven native profile setup,
GraalVM version compatibility, and troubleshooting guide.

Updated:
- installation.md: BOM usage, Gradle BOM, version 3.15, Java requirements
- connectivity.md: version 3.15
- getting-started.md: version 3.15
- windows-native-access.md: remove version-specific wording
- _index.md: add native-image to feature list