@@ -13,8 +13,33 @@ Add the dependency to your `pom.xml`:
 <dependency>
   <groupId>org.aesh</groupId>
   <artifactId>readline</artifactId>
-  <version>3.6</version>
+  <version>3.15</version>
 </dependency>
+```
+
+### Using the BOM
+
+For multi-module projects, the BOM ensures consistent versions across all aesh-readline modules:
+
+```xml
+<dependencyManagement>
+  <dependencies>
+    <dependency>
+      <groupId>org.aesh</groupId>
+      <artifactId>aesh-readline-bom</artifactId>
+      <version>3.15</version>
+      <type>pom</type>
+      <scope>import</scope>
+    </dependency>
+  </dependencies>
+</dependencyManagement>
+
+<dependencies>
+  <dependency>
+    <groupId>org.aesh</groupId>
+    <artifactId>readline</artifactId>
+  </dependency>
+</dependencies>
 ```
 
 ## Gradle
@@ -23,7 +48,16 @@ Add the dependency to your `build.gradle`:
 
 ```groovy
 dependencies {
-    implementation 'org.aesh:readline:3.6'
+    implementation 'org.aesh:readline:3.15'
+}
+```
+
+Or with the BOM:
+
+```groovy
+dependencies {
+    implementation platform('org.aesh:aesh-readline-bom:3.15')
+    implementation 'org.aesh:readline'
 }
 ```
 
@@ -39,7 +73,7 @@ mvn clean install
 
 ## Terminal Connectivity
 
-Æsh Readline includes modules for remote connectivity:
+Aesh Readline includes modules for remote connectivity:
 
 ### SSH Support
 
@@ -47,7 +81,7 @@ mvn clean install
 <dependency>
   <groupId>org.aesh</groupId>
   <artifactId>terminal-ssh</artifactId>
-  <version>3.6</version>
+  <version>3.15</version>
 </dependency>
 ```
 
@@ -57,7 +91,7 @@ mvn clean install
 <dependency>
   <groupId>org.aesh</groupId>
   <artifactId>terminal-telnet</artifactId>
-  <version>3.6</version>
+  <version>3.15</version>
 </dependency>
 ```
 
@@ -67,11 +101,14 @@ mvn clean install
 <dependency>
   <groupId>org.aesh</groupId>
   <artifactId>terminal-http</artifactId>
-  <version>3.6</version>
+  <version>3.15</version>
 </dependency>
 ```
 
-## Requirements
+## Java Version Requirements
 
-- Java 8 or higher
-- Maven 3.6+ (if building from source)
+- **Java 8+**: Full functionality via JNI/exec-based terminal I/O
+- **Java 22+**: FFM-based terminal I/O for better performance (add `--enable-native-access=ALL-UNNAMED`)
+- **Maven 3.6+** for building from source
+
+See [GraalVM Native Image]({{< relref "native-image" >}}) for native compilation support.
